change gallery input type

--- a/create.html
+++ b/create.html
@@ -434,7 +434,7 @@
                                                             </div>
                                                             <div class="mb-3">
                                                                 <label class="form-label">Gallery</label>
-                                                                <input type="text" name="gallery" class="form-control" multiple>
+                                                                <input type="file" name="gallery" class="form-control" multiple>
                                                             </div>
                                                             <div class="mb-3">
                                                                 <label class="form-label">Video</label>
