--- a/create.html
+++ b/create.html
@@ -438,7 +438,7 @@
                                                             </div>
                                                             <div class="mb-3">
                                                                 <label class="form-label">Video</label>
-                                                                <input type="file" name="video" class="form-control">
+                                                                <input type="text" name="video" class="form-control" placeholder="Paste YouTube URL">
                                                             </div>
                                                             <div class="mb-3">
                                                                 <label class="form-label">Musik</label>
